phases (#83)
* phases controller, serializer, openapi specs

* security review
