# app/serializers/round_serializer.rb
@@ -1,0 +1,4 @@
+class RoundSerializer < ActiveModel::Serializer
+  attributes :id, :round_number, :phase_id
+  attributes :started_at, :ended_at
+end
